test: update test